new project button mastery

--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@
         }
         form button {
             padding: 0.5rem 1rem;
+            border: none;
             background: #333;
             color: #fff;
             border: brown;
