--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@
         form button {
             padding: 0.5rem 1rem;
             border: none;
+            border-radius: 18px;
             background: #333;
             color: #fff;
             border: brown;
